[package]
name = "host-ili9325"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
rust-crypto = "0.2.36"
tokio = { version = "1.35.1", features = ["macros", "rt", "net", "rt-multi-thread"]}
walkdir = "2.4.0"

[profile.release]
strip = true
